change p in hogwarts

--- a/hogwarts.html
+++ b/hogwarts.html
@@ -66,7 +66,7 @@
     <header>
       <div class="header_text">
         <h1>Hogwarts School Assignment</h1>
-        <p>Working with e-shop & WP database</p>
+        <p>Working with JSON & Vanilla JavaScript.</p>
 
         <a href="https://zuzik772.github.io/hogwardsAssignment/" target="_blank" class="btn"
           >Full project &#x2794;</a
